@@ -1,3 +1,9 @@
+2006-08-25  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* src/gdict-window.c:
+	(sidebar_page_changed_cb): Update the sidebar contents when
+	changing pages.
+
 2006-08-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* data/Makefile.am: Let the scalable icon be installed
